logs/web2py.log
2013-01-24 09:09:55,081 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:09:55,083 - web2py.app.blog - INFO - <Storage {'nome': 'fernadoou'}>
2013-01-24 09:18:37,127 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:18:37,129 - web2py.app.blog - INFO - <Storage {}>
2013-01-24 09:18:37,130 - web2py.app.blog - ERROR - integer division or modulo by zero
2013-01-24 09:23:19,299 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:23:19,300 - web2py.app.blog - INFO - <Storage {}>
2013-01-24 09:23:19,301 - web2py.app.blog - ERROR - integer division or modulo by zero
2013-01-24 09:23:50,128 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:23:50,129 - web2py.app.blog - INFO - <Storage {}>
2013-01-24 09:23:50,130 - web2py.app.blog - ERROR - integer division or modulo by zero
2013-01-24 09:29:28,753 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:29:28,754 - web2py.app.blog - INFO - <Storage {}>
2013-01-24 09:58:54,733 - web2py.app.blog - DEBUG - execute funcao add
2013-01-24 09:58:54,734 - web2py.app.blog - INFO - <Storage {}>
2013-01-24 10:01:33,498 - web2py.app.blog - INFO - <Row {'first_name': 'Fernando', 'last_name': 'Vieira', 'registration_id': '', 'email': 'fndiaz02@gmail.com', 'reset_password_key': '', 'registration_key': '', 'id': 1}>
2013-01-24 10:01:45,768 - web2py.app.blog - INFO - <Row {'first_name': 'Fernando', 'last_name': 'Vieira', 'registration_id': '', 'email': 'fndiaz02@gmail.com', 'reset_password_key': '', 'registration_key': '', 'id': 1}>
2013-01-24 10:07:57,332 - web2py.app.blog - INFO - <Row {'first_name': 'Fernando', 'last_name': 'Vieira', 'registration_id': '', 'email': 'fndiaz02@gmail.com', 'reset_password_key': '', 'registration_key': '', 'id': 1}>
2013-01-24 10:07:57,334 - web2py.app.blog - INFO - 1
2013-01-24 10:08:04,647 - web2py.app.blog - INFO - <Row {'first_name': 'Fernando', 'last_name': 'Vieira', 'registration_id': '', 'email': 'fndiaz02@gmail.com', 'reset_password_key': '', 'registration_key': '', 'id': 1}>
2013-01-24 10:08:04,650 - web2py.app.blog - INFO - 1
2013-01-24 10:28:16,088 - web2py.app.blog - INFO - <Row {'first_name': 'Fernando', 'last_name': 'Vieira', 'registration_id': '', 'email': 'fndiaz02@gmail.com', 'reset_password_key': '', 'registration_key': '', 'id': 1}>
2013-01-24 10:28:16,089 - web2py.app.blog - INFO - 1
2013-01-24 15:23:05,020 - web2py.app.blog - INFO - notifica
2013-01-24 15:28:58,028 - web2py.app.blog - INFO - notifica
2013-01-24 16:49:32,489 - web2py.app.blog - INFO - notifica
2013-01-24 16:53:38,352 - web2py.app.blog - INFO - <Row {'bio': None, 'first_name': 'Dend', 'last_name': 'delkson', 'photo': 'auth_user.photo.852c1e9d624a7670.746563686e6f6c6f676965735f7068702e706e67.png', 'registration_id': '', 'email': 'fernando@ad2.com.br', 'reset_password_key': '', 'gender': 'masculino', 'registration_key': '', 'id': 5}>
2013-01-24 16:53:38,354 - web2py.app.blog - INFO - 5
2013-01-26 18:55:18,224 - web2py.rewrite - ERROR - /var/www/web2py_curso/routes.py has a syntax error and will not be loaded
Traceback (most recent call last):
  File "/var/www/web2py_curso/gluon/rewrite.py", line 327, in load
    exec (data + '\n') in symbols
  File "<string>", line 15
    
   ^
SyntaxError: invalid syntax

2013-01-26 18:55:22,984 - web2py.rewrite - ERROR - /var/www/web2py_curso/routes.py has a syntax error and will not be loaded
Traceback (most recent call last):
  File "/var/www/web2py_curso/gluon/rewrite.py", line 327, in load
    exec (data + '\n') in symbols
  File "<string>", line 15
    
   ^
SyntaxError: invalid syntax

2013-02-03 12:12:54,552 - web2py.app.blog - INFO - <Storage {'nome': 'sad', 'email': 'scsad', 'mensagem': 'asdsad'}>
2013-02-03 20:53:07,485 - web2py.app.blog - DEBUG - executando add post
2013-02-03 21:11:39,796 - web2py.rewrite - ERROR - /var/www/web2py_curso/routes.py has a syntax error and will not be loaded
Traceback (most recent call last):
  File "/var/www/web2py_curso/gluon/rewrite.py", line 327, in load
    exec (data + '\n') in symbols
  File "<string>", line 5
SyntaxError: non-keyword arg after keyword arg

